# zoneout

./: LICENSE  README.md  SPECS.md  pyproject.toml
src/zoneout/: __init__.py  cli.py  device.py  exceptions.py  models.py  protocol.py
src/zoneout/gui/: controller.py  main.py
src/zoneout/gui/qml/: AdvancedTab.qml  ControlsTab.qml  NotificationsTab.qml  main.qml
